--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "logrocket": "^9.0.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "react-router-dom": "^6.26.2"
